--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -149,4 +149,4 @@ jobs:
           draft: false
           artifacts: "*.tar.gz,*.zip,build/app/outputs/flutter-apk/*.apk"
           allowUpdates: true
-          token: ${{ secrets.Release }}
+          # token: ${{ secrets.Release }}
