--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.1.5
   provider: ^6.1.2
   shared_preferences: ^2.3.3
+  # printing: ^5.12.0
 
 dev_dependencies:
   flutter_test:
