--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   path_provider: ^2.1.5
   provider: ^6.1.2
   shared_preferences: ^2.3.3
+  window_manager: ^0.4.3
+  dict_reader: ^1.1.4
+  webf: ^0.16.2
+  # drift: ^2.22.1
   # printing: ^5.12.0
 
 dev_dependencies:
@@ -59,6 +63,10 @@ dev_dependencies:
   build_test: ^2.2.2
 
   flutter_launcher_icons: "^0.14.1"
+
+
+dependency_overrides:
+  intl: ^0.19.0
 
 
 # For information on the generic Dart part of this file, see the
