--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   window_manager: ^0.4.3
   dict_reader: ^1.1.4
   webf: ^0.16.2
+  url_launcher: ^6.3.1
   # drift: ^2.22.1
   # printing: ^5.12.0
 
