--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   universal_io: ^2.2.2
   image_picker: ^1.1.2
   dotted_border: ^2.1.0
+  crypto: ^3.0.6
+  flutter_cache_manager: ^3.4.1
 
 dev_dependencies:
   flutter_test:
