--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  pdfrx: ^1.0.98
+  pdfrx: 1.0.98
   path_provider: ^2.1.5
   provider: ^6.0.5
   shared_preferences: ^2.3.3
