--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,8 @@ jobs:
       - name: FlutterAction
         uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
+          channel: stable
+          flutter-version: 3.27.3
 
       - name: 下载依赖
         run: flutter pub get
